Import data set code added.

--- a/Capstone Course Project.ipynb
+++ b/Capstone Course Project.ipynb
@@ -22,16 +22,48 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Hello Capstone Project Course!\n"
+     "text": [
+      "Hello Capstone Project Course!\n"
+     ]
     }
    ]
   },
   {
-   "source": [],
+   "source": [
+    "1. IMPORTING AND CLEANING DATA"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "1.a Importing the data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_seattleTrafficData = pd.read_csv(r'/Users/josephcardin/Dropbox (Personal)/My Mac (MacBook-Pro.hsd1.ca.comcast.net)/Documents/Data Science/IBM Data Scientist Specialization/Applied Data Science Capstone/Coursera_Capstone/Data-Collisions.csv')"
+   ]
+  },
+  {
+   "source": [
+    "1.2 Cleaning the data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "outputs": []
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
