Removed unneeded columns

--- a/Capstone Course Project.ipynb
+++ b/Capstone Course Project.ipynb
@@ -37,18 +37,36 @@
   },
   {
    "source": [
-    "1.a Importing the data"
+    "1.1 Importing the data"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "db_seattleTrafficData = pd.read_csv(r'/Users/josephcardin/Dropbox (Personal)/My Mac (MacBook-Pro.hsd1.ca.comcast.net)/Documents/Data Science/IBM Data Scientist Specialization/Applied Data Science Capstone/Coursera_Capstone/Data-Collisions.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(194673, 38)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(db_seattleTrafficData.shape)\n",
+    "print(db_seattleTrafficData.head(5))"
    ]
   },
   {
@@ -57,6 +75,56 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [
+    "1.2.a Dropping unnesseary columns of data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_seattleTrafficData.drop([\"SEVERITYCODE_1\", \"INCKEY\", \"COLDETKEY\", \"REPORTNO\", \"INTKEY\", \"EXCEPTRSNCODE\", \"EXCEPTRSNDESC\", \"INATTENTIONIND\", \"UNDERINFL\", \"PEDROWNOTGRNT\", \"SDOTCOLNUM\", \"SEGLANEKEY\", \"CROSSWALKKEY\", \"HITPARKEDCAR\"], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(db_seattleTrafficData.shape)\n",
+    "print(db_seattleTrafficData.head(5))"
+   ]
+  },
+  {
+   "source": [
+    "1.2.b Removed rows with missing data in any column. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(194673, 24)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(db_seattleTrafficData.shape)"
+   ]
   },
   {
    "cell_type": "code",
