Started Additional Databases section

--- a/Capstone Course Project.ipynb
+++ b/Capstone Course Project.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_SeattleTrafficData = pd.read_csv(r'/Users/josephcardin/Dropbox (Personal)/My Mac (MacBook-Pro.hsd1.ca.comcast.net)/Documents/Data Science/IBM Data Scientist Specialization/Applied Data Science Capstone/Coursera_Capstone/Data-Collisions.csv')"
+    "db_SeattleCollisionData = pd.read_csv(r'/Users/josephcardin/Dropbox (Personal)/My Mac (MacBook-Pro.hsd1.ca.comcast.net)/Documents/Data Science/IBM Data Scientist Specialization/Applied Data Science Capstone/Coursera_Capstone/Data-Collisions.csv')"
    ]
   },
   {
@@ -65,8 +65,8 @@
     }
    ],
    "source": [
-    "print(db_SeattleTrafficData.shape)\n",
-    "print(db_SeattleTrafficData.head(5))"
+    "print(db_SeattleCollisionData.shape)\n",
+    "print(db_SeattleCollisionData.head(5))"
    ]
   },
   {
@@ -77,19 +77,12 @@
    "metadata": {}
   },
   {
-   "source": [
-    "1.2.a Dropping unnesseary columns of data"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_SeattleTrafficData.drop([\"SEVERITYCODE_1\", \"INCKEY\", \"COLDETKEY\", \"REPORTNO\", \"INTKEY\", \"EXCEPTRSNCODE\", \"EXCEPTRSNDESC\", \"INATTENTIONIND\", \"UNDERINFL\", \"PEDROWNOTGRNT\", \"SDOTCOLNUM\", \"SEGLANEKEY\", \"CROSSWALKKEY\", \"HITPARKEDCAR\"], axis=1, inplace=True)"
+    "db_SeattleCollisionData.drop([\"SEVERITYCODE_1\", \"INCKEY\", \"COLDETKEY\", \"REPORTNO\", \"INTKEY\", \"EXCEPTRSNCODE\", \"EXCEPTRSNDESC\", \"INATTENTIONIND\", \"UNDERINFL\", \"PEDROWNOTGRNT\", \"SDOTCOLNUM\", \"SEGLANEKEY\", \"CROSSWALKKEY\", \"HITPARKEDCAR\"], axis=1, inplace=True)"
    ]
   },
   {
@@ -106,16 +99,16 @@
     }
    ],
    "source": [
-    "print(db_SeattleTrafficData.shape)\n",
-    "print(db_SeattleTrafficData.head(5))"
+    "print(db_SeattleCollisionData.shape)\n",
+    "print(db_SeattleCollisionData.head(5))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "2. CREATING ADDITIONAL DATABASES"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
