--- a/Capstone Course Project.ipynb
+++ b/Capstone Course Project.ipynb
@@ -17,7 +17,7 @@
    "metadata": {
     "tags": []
    },
-   "execution_count": 64,
+   "execution_count": 70,
    "outputs": [
     {
      "output_type": "stream",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -109,6 +109,50 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Due to every row having a NaN in at least on column could not simply #clear out all rows with missing data.  Need to create specific db's with #missing data only removed when applicable for that db and its future #need."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creating db where Weather and Severity are not missing\n",
+    "db_SCD_Weather = db_SeattleCollisionData[db_SeattleCollisionData['WEATHER'].notna()]\n",
+    "db_SCD_Weather = db_SCD_Weather[db_SCD_Weather['SEVERITYCODE'].notna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(189592, 24)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(db_SCD_Weather.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
