--- a/Capstone Course Project.ipynb
+++ b/Capstone Course Project.ipynb
@@ -149,6 +149,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(184414, 24)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Creating db where X or Y are not missing\n",
+    "db_SDC_Location = db_SeattleCollisionData[db_SeattleCollisionData['X'].notna()]\n",
+    "print(db_SDC_Location.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
