Changed db to df. Removed print head(5)'s.

--- a/Capstone Course Project.ipynb
+++ b/Capstone Course Project.ipynb
@@ -17,7 +17,7 @@
    "metadata": {
     "tags": []
    },
-   "execution_count": 70,
+   "execution_count": 1,
    "outputs": [
     {
      "output_type": "stream",
@@ -44,16 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_SeattleCollisionData = pd.read_csv(r'/Users/josephcardin/Dropbox (Personal)/My Mac (MacBook-Pro.hsd1.ca.comcast.net)/Documents/Data Science/IBM Data Scientist Specialization/Applied Data Science Capstone/Coursera_Capstone/Data-Collisions.csv')"
+    "df_SeattleCollisionData = pd.read_csv(r'/Users/josephcardin/Dropbox (Personal)/My Mac (MacBook-Pro.hsd1.ca.comcast.net)/Documents/Data Science/IBM Data Scientist Specialization/Applied Data Science Capstone/Coursera_Capstone/Data-Collisions.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,8 +65,7 @@
     }
    ],
    "source": [
-    "print(db_SeattleCollisionData.shape)\n",
-    "print(db_SeattleCollisionData.head(5))"
+    "print(df_SeattleCollisionData.shape)"
    ]
   },
   {
@@ -78,16 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_SeattleCollisionData.drop([\"SEVERITYCODE_1\", \"INCKEY\", \"COLDETKEY\", \"REPORTNO\", \"INTKEY\", \"EXCEPTRSNCODE\", \"EXCEPTRSNDESC\", \"INATTENTIONIND\", \"UNDERINFL\", \"PEDROWNOTGRNT\", \"SDOTCOLNUM\", \"SEGLANEKEY\", \"CROSSWALKKEY\", \"HITPARKEDCAR\"], axis=1, inplace=True)"
+    "df_SeattleCollisionData.drop([\"SEVERITYCODE_1\", \"INCKEY\", \"COLDETKEY\", \"REPORTNO\", \"INTKEY\", \"EXCEPTRSNCODE\", \"EXCEPTRSNDESC\", \"INATTENTIONIND\", \"UNDERINFL\", \"PEDROWNOTGRNT\", \"SDOTCOLNUM\", \"SEGLANEKEY\", \"CROSSWALKKEY\", \"HITPARKEDCAR\"], axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -99,8 +98,7 @@
     }
    ],
    "source": [
-    "print(db_SeattleCollisionData.shape)\n",
-    "print(db_SeattleCollisionData.head(5))"
+    "print(df_SeattleCollisionData.shape)"
    ]
   },
   {
@@ -112,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,18 +119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Creating db where Weather and Severity are not missing\n",
-    "db_SCD_Weather = db_SeattleCollisionData[db_SeattleCollisionData['WEATHER'].notna()]\n",
-    "db_SCD_Weather = db_SCD_Weather[db_SCD_Weather['SEVERITYCODE'].notna()]"
+    "df_SCD_Weather = df_SeattleCollisionData[db_SeattleCollisionData['WEATHER'].notna()]\n",
+    "df_SCD_Weather = df_SCD_Weather[db_SCD_Weather['SEVERITYCODE'].notna()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -144,26 +142,26 @@
     }
    ],
    "source": [
-    "print(db_SCD_Weather.shape)"
+    "print(df_SCD_Weather.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(184414, 24)\n"
+      "(189339, 24)\n"
      ]
     }
    ],
    "source": [
     "#Creating db where X or Y are not missing\n",
-    "db_SDC_Location = db_SeattleCollisionData[db_SeattleCollisionData['X'].notna()]\n",
-    "print(db_SDC_Location.shape)"
+    "df_SDC_Location = df_SeattleCollisionData[df_SeattleCollisionData['X'].notna()]\n",
+    "print(df_SDC_Location.shape)"
    ]
   },
   {
