Removed columns from Weather df

--- a/Capstone Course Project.ipynb
+++ b/Capstone Course Project.ipynb
@@ -17,7 +17,7 @@
    "metadata": {
     "tags": []
    },
-   "execution_count": 21,
+   "execution_count": 60,
    "outputs": [
     {
      "output_type": "stream",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,35 +119,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Creating df where Weather and Severity are not missing\n",
-    "df_SCD_Weather = df_SeattleCollisionData[db_SeattleCollisionData['WEATHER'].notna()]\n",
-    "df_SCD_Weather = df_SCD_Weather[db_SCD_Weather['SEVERITYCODE'].notna()]"
+    "df_SCD_Weather = df_SeattleCollisionData[df_SeattleCollisionData['WEATHER'].notna()]\n",
+    "df_SCD_Weather = df_SCD_Weather[df_SCD_Weather['SEVERITYCODE'].notna()]"
    ]
   },
   {
+   "source": [
+    "#Removing unnecessary columns for this analysis.  \n",
+    "df_SCD_Weather.drop(['X', 'Y', 'STATUS', 'ADDRTYPE', 'LOCATION', 'COLLISIONTYPE', 'PERSONCOUNT', 'JUNCTIONTYPE', 'SDOT_COLCODE', 'SDOT_COLDESC', 'ST_COLCODE', 'ST_COLDESC', 'PEDCOUNT', 'PEDCYLCOUNT', 'VEHCOUNT', 'INCDATE', 'INCDTTM' ], axis=1, inplace=True)"
+   ],
    "cell_type": "code",
-   "execution_count": 28,
+   "metadata": {},
+   "execution_count": 67,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(189592, 24)\n"
+      "(189592, 7)\n   OBJECTID  SEVERITYCODE      SEVERITYDESC   WEATHER ROADCOND LIGHTCOND  \\\n0         1             2  Injury Collision  Overcast      Wet  Daylight   \n\n  SPEEDING  \n0      NaN  \n"
      ]
     }
    ],
    "source": [
-    "print(df_SCD_Weather.shape)"
+    "print(df_SCD_Weather.shape)\n",
+    "print(df_SCD_Weather.head(1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,12 +220,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting the Weather column as index\n",
-    "df_SCD_Weather.set_index('WEATHER', inplace=True)"
+    "# Setting the Weather column as index\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "   OBJECTID  SEVERITYCODE                    SEVERITYDESC   WEATHER ROADCOND  \\\n0         1             2                Injury Collision  Overcast      Wet   \n1         2             1  Property Damage Only Collision   Raining      Wet   \n2         3             1  Property Damage Only Collision  Overcast      Dry   \n\n                 LIGHTCOND SPEEDING  \n0                 Daylight      NaN  \n1  Dark - Street Lights On      NaN  \n2                 Daylight      NaN  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_SCD_Weather.head(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "OBJECTID         int64\nSEVERITYCODE     int64\nSEVERITYDESC    object\nWEATHER         object\nROADCOND        object\nLIGHTCOND       object\nSPEEDING        object\ndtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_SCD_Weather['WEATHER']=df_SCD_Weather['WEATHER'].astype(str).str.replace('/',' ')\n",
+    "WeatherType=df_SCD_Weather.dtypes\n",
+    "print(WeatherType)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "   OBJECTID  SEVERITYCODE                    SEVERITYDESC      WEATHER  \\\n0         1             2                Injury Collision  b'Overcast'   \n1         2             1  Property Damage Only Collision   b'Raining'   \n2         3             1  Property Damage Only Collision  b'Overcast'   \n\n  ROADCOND                LIGHTCOND SPEEDING  \n0      Wet                 Daylight      NaN  \n1      Wet  Dark - Street Lights On      NaN  \n2      Dry                 Daylight      NaN  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_SCD_Weather.head(2))"
    ]
   },
   {
