Added value counts on severity desc

--- a/Capstone Course Project.ipynb
+++ b/Capstone Course Project.ipynb
@@ -251,6 +251,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Property Damage Only Collision    132488\n",
+       "Injury Collision                   57104\n",
+       "Name: SEVERITYDESC, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "source": [
+    "df_SCD_Weather['SEVERITYDESC'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
